# CSparseSolvers

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: FEMBAR_SparseCholeskySolver.scn  FEMBAR_SparseLUSolver.scn
src/CSparseSolvers/: SparseCholeskySolver.cpp  SparseCholeskySolver.h  SparseCholeskySolver.inl  SparseLUSolver.cpp  SparseLUSolver.h  SparseLUSolver.inl  config.h.in  init.cpp
